# sc_client

./: CODE_OF_CONDUCT.md  Cargo.toml  Config.toml  README.md  settings.toml
examples/: server.rs  settings.toml  synth.rs  synthdef.rs
examples/synthdefs/: sc_client_test_1.scsyndef
src/: error.rs  lib.rs  osc_handler.rs  osc_server.rs  server.rs  synth.rs  synth_definition.rs  types.rs
src/error/: mod.rs
src/osc_handler/: mod.rs
src/osc_server/: mod.rs
src/osc_server/tests/: mod.rs
src/server/: mod.rs  notify_responder.rs  options.rs  osc_handler.rs  quit_responder.rs  sc_server_process.rs  status_responder.rs  version_responder.rs
src/server/options/: mod.rs  tests.rs
src/server/options/tests/: mod.rs
src/synth/: control_value_responder.rs  mod.rs
src/synth_definition/: mod.rs
